...
	enum ExposureNotificationSetting {
		static let descriptionTitleInactive = "AppStrings.ExposureNotificationSetting.descriptionTitleInactive"
		static let descriptionTitle = "AppStrings.ExposureNotificationSetting.descriptionTitle"
		static let descriptionText1 = "AppStrings.ExposureNotificationSetting.descriptionText1"
		static let descriptionText2 = "AppStrings.ExposureNotificationSetting.descriptionText2"
...
		static let imageDescription = "AppStrings.ContactDiaryInformation.imageDescription"
		static let descriptionTitle = "AppStrings.ContactDiaryInformation.descriptionTitle"
		static let descriptionSubHeadline = "AppStrings.ContactDiaryInformation.descriptionSubHeadline"
		static let dataPrivacyTitle = "AppStrings.ContactDiaryInformation.dataPrivacyTitle"
		static let legal_1 = "AppStrings.ContactDiaryInformation.legalHeadline_1"
		
...
		static let imprintSection4Title = "AppStrings.AppInformation.imprintSection4Title"
		static let imprintSection4Text = "AppStrings.AppInformation.imprintSection4Text"
		static let privacyImageDescription = "AppStrings.AppInformation.privacyImageDescription"
		static let privacyTitle = "AppStrings.AppInformation.privacyTitle"
		static let termsImageDescription = "AppStrings.AppInformation.termsImageDescription"
...
		}

		static let fakeHC1 = "QRScanner_FAKE_HC1"
		static let fakeHC2 = "QRScanner_FAKE_HC2"
		static let fakePCR = "QRScanner_FAKE_PCR"
		static let fakePCR2 = "QRScanner_FAKE_PCR2"
		static let fakeEvent = "QRScanner_FAKE_EVENT"
		static let fakeTicketValidation = "QRScanner_FAKE_TICKET_VALIDATION"
		static let other = "QRScanner_OTHER"
...

	enum SRSConsentScreen {
		static let primaryButton = "AppStrings.SRSConsentScreen.primaryButton"
		static let secondaryButton = "AppStrings.SRSConsentScreen.secondaryButton"
		static let accImageDescription = "AppStrings.SRSConsentScreen.accImageDescription"
		static let headerSection1 = "AppStrings.SRSConsentScreen.headerSection1"
		static let acknowledgementTitle = "AppStrings.SRSConsentScreen.acknowledgementTitle"
		static let dataProcessingDetailInfoButton = "AppStrings.SRSConsentScreen.dataProcessingDetailInfoButton"
	}
...

			enum Pcr {
				static let headline = "AppStrings.ExposureSubmission.OverwriteNotice.Pcr.headline"
				static let text = "AppStrings.ExposureSubmission.OverwriteNotice.Pcr.text"
			}
...

		enum TestOwnerSelection {
			static let userButton = "AppStrings.ExposureSubmission.TestOwnerSelection.userButton"
			static let familyMemberButton = "AppStrings.ExposureSubmission.TestOwnerSelection.familyMemberButton"
		}
...
		static let image = "ExposureSubmissionIntroViewController.image"
		
		static let primaryFooterButton = "General.primaryFooterButton"
		static let secondaryFooterButton = "General.secondaryFooterButton"
		static let cancelButton = "General.cancelButton"
...
		static let certificates = "TabBar.certificates"
		static let scanner = "TabBar.scanner"
		static let checkin = "TabBar.checkin"
		static let diary = "TabBar.diary"
	}
...
			static let titleLabel = "AppStrings.TraceLocations.Details.titleLabel"
			static let locationLabel = "AppStrings.TraceLocations.Details.locationLabel"
			static let checkInButton = "AppStrings.Checkins.Details.checkInButton"
		}
		
		enum Overview {
			static let tableView = "TableView.TracelocationOverview"
			static let menueButton = "AppStrings.TraceLocations.Overview.menueButton"
			static let addButton = "AppStrings.TraceLocations.Overview.addButton"
			static let emptyStateImage = "AppStrings.TraceLocations.Overview.emptyStateImage"
...
		
		enum Details {
			static let typeLabel = "AppStrings.CheckIn.Edit.checkedOut"
			static let traceLocationTypeLabel = "AppStrings.CheckIn.Edit.traceLocationTypeLabel"
			static let traceLocationDescriptionLabel = "AppStrings.CheckIn.Edit.traceLocationDescriptionLabel"
...
			static let saveToDiary = "AppStrings.Checkins.Details.saveToDiary"
			static let automaticCheckout = "AppStrings.Checkins.Details.automaticCheckout"
			static let checkinFor = "AppStrings.Checkins.Details.checkinFor"
		}
		
...
